<resources>
    <string name="app_name">Amusement Park</string>
    <string name="register">Register</string>
    <string name="forgetpassword">Forget Password</string>
    <string name="login">Login</string>

    <string name="buyticket">Buy Ticket</string>
    <string name="queuing">Queuing</string>
    <string name="parking">Parking</string>
    <string name="account">Account</string>

    <string name="StationName">Station Name</string>
    <string name="EstimateWaitingTime">Estimated Waiting Time</string>
    <string name="CancelQueue">Cancel Queueing</string>
    <string name="StationOne"></string>
    <string name="StationTwo"></string>
    <string name="StationThree"></string>
    <string name="TimeOne"></string>
    <string name="TimeTwo"></string>
    <string name="TimeThree"></string>
    <string name="JoinQueue">Join Queueing</string>


    <string name="scanqr">Scan QR Code</string>
    <string name="username">Username</string>
    <string name="curr_password">Current Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update_info">Update Information</string>
    <string name="plate_number">Plate Number</string>
    <string name="confirm">Confirm</string>
    <string name="password">Your Password</string>
    <string name="email">email</string>


    <string name="yourTickets">My Tickets</string>
    <string name="ticketInfo">Your Tickets info here</string>
    <string name="buyTicket_bt">Buy Ticket</string>
    <string name="ticketHistory_bt">Booking History</string>
    <string name="selectDate">Date:</string>
    <string name="selectTicketType">Ticket Type:</string>
    <string name="totalPayment">Number of Tickets:</string>
    <string name="placeOrder">Add to cart</string>
    <string name="select_date_hint">Select Date</string>
    <string name="days">Number of Days:</string>
    <string name="title_ticketBooking">Ticket Booking System</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="next_bt1">Next Step</string>
    <string name="next_bt2">Confirm</string>
    <string name="todo4">TODO4</string>
    <string name="todo5">TODO5</string>
    <string name="paymentdone">See My Tickets</string>
    <string name="cartView_textview1">Ticket icon</string>
    <string name="cartView_textview2">Ticket types</string>
    <string name="cartView_textview3">Ticket price</string>
    <string name="cartView_textview4">Remove</string>
    <string name="cartView_textview5">Date</string>



    <string-array name="ticketTypes">
        <item>Child(Age3~12) $10</item>
        <item>Adult $20</item>
        <item>Senior(Age65+) $10</item>
        <item>Student $15</item>
    </string-array>

    <string-array name="ticketTypes2">
        <item>Child(Age3~12) $20 </item>
        <item>Adult $40</item>
        <item>Senior(Age65+) $20</item>
        <item>Student $30</item>
    </string-array>

    <string-array name="ticketTypes3">
        <item>Child(Age3~12) $30 </item>
        <item>Adult $60</item>
        <item>Senior(Age65+) $30</item>
        <item>Student $45</item>
    </string-array>

    <string-array name="NumOfDays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="NumOfTickets">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>



</resources>
