<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/yourTickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourTickets"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195" />

    <TextView
        android:id="@+id/ticketInfo"
        android:layout_width="220dp"
        android:layout_height="136dp"
        android:text="@string/ticketInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourTickets"
        app:layout_constraintVertical_bias="0.077" />

    <Button
        android:id="@+id/buyTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buyTicket_bt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketInfo"
        app:layout_constraintVertical_bias="0.161" />

    <Button
        android:id="@+id/ticketHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticketHistory_bt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toEndOf="@+id/buyTicket"
        app:layout_constraintTop_toBottomOf="@+id/ticketInfo"
        app:layout_constraintVertical_bias="0.161" />
</androidx.constraintlayout.widget.ConstraintLayout>

