<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">


    <RelativeLayout
        android:layout_width="116dp"
        android:layout_height="82dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/listview_image"
            android:layout_width="75dp"
            android:layout_height="41dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="19dp"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="26dp"
            android:gravity="center"
            android:text="@string/cartView_textview1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/listview_date"
            android:layout_width="84dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="2dp"
            android:text="@string/cartView_textview5" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="191dp"
        android:layout_height="83dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/listview_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cartView_textview2" />

        <TextView
            android:id="@+id/listview_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cartView_textview3" />

        <Spinner
            android:id="@+id/listview_num"
            android:layout_width="159dp"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="103dp"
        android:layout_height="83dp">

        <ImageView
            android:id="@+id/listview_remove"
            android:layout_width="29dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="47dp"
            android:layout_marginRight="47dp"
            android:layout_marginBottom="33dp"
            android:gravity="center"
            android:text="@string/cartView_textview4" />
    </RelativeLayout>



</LinearLayout>